--- a/index.html
+++ b/index.html
@@ -4,19 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Subir Archivos y Datos</title>
+    <title>Appboot sitemas</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <div class="container">
-        <h2>Formulario de Consulta</h2>
+        <h2 style="text-shadow: 2px 2px 4px #40d145;">Formulario de Consulta</h2>
         <form id="uploadForm">
             <label for="nombreApellido">Nombre y Apellido:</label>
             <input type="text" id="nombreApellido" name="nombreApellido" required>
 
             <label for="afiliado">Número de Afiliado:</label>
-            <input type="text" id="afiliado" name="afiliado" required pattern="\d{6}/\d{2}">
+            <div class="afiliado-container">
+                <input type="text" id="afiliado1" name="afiliado1" required pattern="\d{6}" maxlength="6"
+                    placeholder="000000">
+                <span>/</span>
+                <input type="text" id="afiliado2" name="afiliado2" required pattern="\d{2}" maxlength="2"
+                    placeholder="00">
+            </div>
 
             <label for="consulta">Consulta:</label>
             <textarea id="consulta" name="consulta" required></textarea>
@@ -47,6 +53,9 @@
 
             <label for="empresa">Empresa:</label>
             <input type="text" id="empresa" name="empresa" required>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
 
             <button type="submit">Enviar</button>
         </form>
